// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seo module TwitterTags generates correct tags on article pages 1`] = `
Array [
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Post title"
    name="twitter:title"
  />,
  <meta
    content="Post description."
    name="twitter:description"
  />,
  <meta
    content="/logos/logo-1024.png"
    name="twitter:image"
  />,
  <meta
    content="Post cover image alt text."
    name="twitter:image:alt"
  />,
  <meta
    content="Vagr9K"
    name="twitter:creator"
  />,
  <meta
    content="Vagr9K"
    name="twitter:site"
  />,
]
`;

exports[`seo module TwitterTags generates correct tags on website pages 1`] = `
Array [
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Website title"
    name="twitter:title"
  />,
  <meta
    content="Website description."
    name="twitter:description"
  />,
  <meta
    content="/logos/logo-1024.png"
    name="twitter:image"
  />,
  <meta
    content="Website image alt description."
    name="twitter:image:alt"
  />,
  <meta
    content="Vagr9K"
    name="twitter:creator"
  />,
  <meta
    content="Vagr9K"
    name="twitter:site"
  />,
]
`;

exports[`seo module TwitterTags generates correct tags when missing description 1`] = `
Array [
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Post title"
    name="twitter:title"
  />,
  <meta
    content="/logos/logo-1024.png"
    name="twitter:image"
  />,
  <meta
    content="Post cover image alt text."
    name="twitter:image:alt"
  />,
  <meta
    content="Vagr9K"
    name="twitter:creator"
  />,
  <meta
    content="Vagr9K"
    name="twitter:site"
  />,
]
`;

exports[`seo module TwitterTags generates correct tags when missing imageUrl 1`] = `
Array [
  <meta
    content="summary_large_image"
    name="twitter:card"
  />,
  <meta
    content="Post title"
    name="twitter:title"
  />,
  <meta
    content="Post description."
    name="twitter:description"
  />,
  <meta
    content="Post cover image alt text."
    name="twitter:image:alt"
  />,
  <meta
    content="Vagr9K"
    name="twitter:creator"
  />,
  <meta
    content="Vagr9K"
    name="twitter:site"
  />,
]
`;
